--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,9 @@ __pycache__/
 *.py[cod]
 *$py.class
 
+# macOS specific files
 .DS_Store
+**/.DS_Store
 
 # Environment (Optional, if using virtual environments)
 # .env
